infra/k8s/base/service.yaml
# Service Definition
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
    app.kubernetes.io/name: user-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: user-service
